<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_recetas"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/altura_app_bar"
        android:background="@color/appBarColor"
        android:gravity="center|start"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/irAtras"
            android:layout_width="@dimen/ancho_boton_atras"
            android:layout_height="@dimen/altura_boton_atras"
            android:layout_marginStart="@dimen/margen_8dp"
            android:src="@drawable/baseline_arrow_back" />

        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/margen_8dp"
            android:gravity="center"
            android:text="@string/detalle_receta"
            android:textColor="@color/tittleColor"
            android:textSize="@dimen/tamanio_titulo_app_bar"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imagenReceta"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alto_imagen_receta"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/nombreReceta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margen_8dp"
        android:textColor="@color/tittleColor"
        android:textSize="@dimen/tamanio_nombre_receta"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenReceta" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margen_10dp"
        android:layout_marginVertical="@dimen/margen_10dp"
        app:layout_constraintBottom_toTopOf="@+id/ubicacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreReceta">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ingredientes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/preparacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ubicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/margen_10dp"
        android:layout_marginBottom="@dimen/margen_10dp"
        app:backgroundTint="@color/tittleColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_map"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>