...
            android:textColor="@color/tittleColor"
            android:textSize="@dimen/tamanio_titulo_app_bar"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/mapa"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
